feat: make a particular expense private
