# server/routes/handlers/expenses.go
@@ -35,15 +35,16 @@ func NewExpensesHandler(pool *pgxpool.Pool, appConfig config.AppConfig) *Expense
 // @Produce json
 // @Security BearerAuth
 // @Param id path string true "Group ID"
-// @Success 200 {array} models.Expense "Returns list of all expenses in the group"
+// @Success 200 {array} models.Expense "Returns list of all expenses in the group. If an expense is is_private, only the splits related to the authenticated user will be included in the response (creator or involved in splits)"
 // @Failure 401 {object} apierrors.AppError "INVALID_TOKEN: Authentication token is missing, invalid, or expired"
 // @Failure 403 {object} apierrors.AppError "USERS_NOT_RELATED: The authenticated user is not a member of the group"
 // @Failure 404 {object} apierrors.AppError "GROUP_NOT_FOUND: The specified group does not exist"
 // @Failure 500 {object} apierrors.AppError "Internal server error - unexpected database error"
 // @Router /v1/groups/{id}/expenses [get]
 func (h *GroupsHandler) GetExpenses(c *gin.Context) {
+	userID := middleware.MustGetUserID(c)
 	groupID := middleware.MustGetGroupID(c)
-	expenses, err := db.GetExpenses(c.Request.Context(), h.pool, groupID)
+	expenses, err := db.GetExpenses(c.Request.Context(), h.pool, groupID, userID)
 	if err != nil {
 		utils.SendError(c, err) // Shouln't send any error as everything is validated in the middleware
 		return
